<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="save_full_picture">save full picture</string>
    <string name="fileManage">File Manage</string>
    <string name="backLastDir">Back</string>
    <string name="action_settings">upload</string>
    <string name="chooserIdCardType">Document formats setting</string>
    <string name="ActivationProgram">Activation</string>
    <string name="takePicture">Camera</string>
    <string name="license_verification_failed">license verification failed</string>
    <string name="online_activation">Activate Online</string>
    <string name="activation_success">Activate Success</string>
    <string name="dialog_title">Please use your activation key to “Activate Online”</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="importRecog">Import</string>
    <string name="back_confirm">Click again to exit</string>
    <string name="chooseRecogType">Document formats setting</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="unsupport_auto_focus">UnSupport Focus</string>
    <string name="toast_autofocus_failure">Focus Failed</string>
    <string name="unsupportflash">UnSupport Flash</string>
    <string name="exception">Unrecognized code：</string>
    <string name="exception1">Activation failed code：</string>
    <string name="exception2">Recognition initialized failed：</string>
    <string name="exception3">Recogniiton failed for image import, please recognition again code：</string>
    <string name="exception4">Recogniiton failed for image import, Recognition initialized failed code：</string>
    <string name="exception5">Recogniiton failed for image import code：</string>
    <string name="exception6">Recogniiton failed code：</string>
    <string name="exception9">Recognition failure! Please check your document type as you choosed is right or wrong, or confirm your card to be align within frame to scan or not</string>
    <string name="recognized_failed">recognition Failed</string>
    <string name="please_connect_network">Please Connect Network</string>
    <string name="network_unused">Network is not available</string>
    <string name="detectLightspot">Detect light, please change the scan Angle!</string>
    <string name="opendetectLightspot">Open spot detection！</string>
    <string name="closeddetectLightspot">Close spot detection！</string>
    <!-- 证件类型 -->
    <string name="passport">Passport</string>
    <string name="ID_card">Chinese ID card</string>
    <string name="EPT_HK_Macau">Exit-Entry Permit to HK/Macau</string>
    <string name="IDCard_Macau">Macau ID card</string>
    <string name="New_IDCard_Macau">New Macau ID card</string>
    <string name="MRTTTP">Taiwan pass</string>
    <string name="visa">Visa</string>
    <string name="NEEPT_HK_Macau">e-EEP to HK/Macau</string>
    <string name="HRPO">Home return permit (Obverse)</string>
    <string name="HRPR">Home return permit (Reverse)</string>
    <string name="MyKad">MyKad</string> <!-- 马来西亚身份证的叫法 -->
    <string name="TRTTTMTP">To the Mainland Travel Permit</string>
    <string name="Taiwan_IDcard_front">Taiwan ID card (Obverse)</string>
    <string name="Taiwan_IDcard_reverse">Taiwan ID card (Reverse)</string>
    <string name="National_health_insurance_card">National health care card</string>
    <string name="Driver_license">New Zealand Driving license</string>
    <string name="California_driver_license">California driving license</string> <!-- 加利福尼亚驾照 -->
    <string name="HK_IDcard">HK ID card</string>
    <string name="US">U.S.A</string>
    <string name="Singapore_IDcard">Singapore ID card</string>
    <string name="mrz">Machine readable zone</string>
    <string name="china_driver">Chinese Driving license</string>
    <string name="china_driving_license">Chinese vehicle license</string>
    <string name="NTRTTTMTP">New Mainland Travel Permit(Obverse)</string>
    <string name="NTRTTTMTP_01">New Mainland Travel Permit(Reverse)</string>
    <string name="Indonesia_Id_Card">Indonesia Identity Card</string>
    <string name="Thailand_id_card">Thailand Identity card</string>
    <string name="openCameraPermission">Please Open Camera Permission!</string>
    <string name="noFoundProgram">No found program</string>
    <string name="cut_image">OCR cutting......</string>
    <string name="distinguish">OCR processing......</string>
    <string name="Beijingsscard">Beijing social security card</string>
    <string name="ChineseOfficer">certificate of officers</string>
    <string name="Picture_sharing_mode">Picture Sharing Mode</string>
    <string name="tv_QQ_share_way">QQ Sharing Mode</string>
    <string name="tv_email_share_way">email Sharing Mode</string>
    <string name="tv_wexin_share_way">wexin Sharing Mode</string>
    <string name="networkunused">Please Check NetWork</string>
    <string name="tv_http_share_way">Server Sharing Mode</string>
    <string name="tv_httpupload_title">Send To Server</string>
    <string name="upload_success">upload success!</string>
    <string name="upload_File_failed">upload failed!</string>
    <string name="china_driver01">Chinese Driving license(Second)</string>
</resources>